--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -6,31 +6,58 @@
     </div>
     <div class="title-bar">
       <div class="title">{{incident.incidentName}} <span *ngIf="incident.fireOfNoteInd" #el class="fire-icon-container"><img class="icon" height="24" width="24" src="/assets/images/local_fire_department.png" alt="local_fire_department"></span> <span #el *ngIf="!hideOnMobileView()" class="no-print" style="cursor: pointer;" (click)="onWatchlist() ? removeFromWatchlist() : addToWatchlist()"><mat-icon style="color:#1A5A96">{{onWatchlist() ? 'bookmark' : 'bookmark_border'}}</mat-icon></span></div>
-      <div class="subtitle"><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres" rel="noopener" target="_blank">{{convertToFireCentreDescription(this.incident.fireCentreName || incident.fireCentre || incident.fireCentreCode)}}</a></div>
+      <div *ngIf="!hideOnMobileView()" class="subtitle"><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres" rel="noopener" target="_blank">{{convertToFireCentreDescription(this.incident.fireCentreName || incident.fireCentre || incident.fireCentreCode)}}</a></div>
     </div>
-    <div class="info-panel">
-      <div><span class="label">Fire Number: </span><span>{{convertFireNumber(incident)}}</span></div>
-      <div><span class="label">Last Updated: </span><span>{{incident.lastUpdatedTimestamp}}</span></div>
-      <div *ngIf="incident.discoveryDate"><span class="label">Discovered On: </span><span>{{incident.discoveryDate}}</span></div>
-      <div *ngIf="incident.stageOfControlCode === 'OUT'"><span class="label">Declared Out: </span><span>{{incident.declaredOutDate}}</span></div>
+    <div *ngIf="!hideOnMobileView()">
+       <div class="info-panel">
+        <div><span class="label">Fire Number: </span><span>{{convertFireNumber(incident)}}</span></div>
+        <div><span class="label">Last Updated: </span><span>{{incident.lastUpdatedTimestamp}}</span></div>
+        <div *ngIf="incident.discoveryDate"><span class="label">Discovered On: </span><span>{{incident.discoveryDate}}</span></div>
+        <div *ngIf="incident.stageOfControlCode === 'OUT'"><span class="label">Declared Out: </span><span>{{incident.declaredOutDate}}</span></div>
+      </div>
+      <div class="divider"></div>
+      <div class="info-panel">
+        <div class="gutter"><span class="label">Size: </span><span>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares </span> <span>{{displaySizeType(incident.incidentSizeDetail)}}</span></div>
+        <div class="paragraph-format">{{incident.incidentSizeDetail || 'Fire size is estimated and based on the most current information available.'}}</div>
+        <div class="gutter" *ngIf="incident.incidentLocation"><span class="label">Location</span></div>
+        <div class="paragraph-format">{{incident.incidentLocation}}</div>
+        <div class="gutter" *ngIf="incident.traditionalTerritoryDetail"><span class="label">Traditional Territory</span></div>
+        <div class="paragraph-format">{{incident.traditionalTerritoryDetail}}</div>
+      </div>
+      <!-- Evac Orders-->
+      <div *ngIf="evacOrders.length > 0" class="divider"></div>
+      <div style="padding-top: 7px;" *ngIf="evacOrders.length > 0">
+        <h4>Active Evacuation Orders and Alerts</h4>
+        <div class="evac-list" *ngFor="let evac of evacOrders">
+          <mat-icon style="text-decoration: none;">error</mat-icon>
+          <a class="label" [href]="evac.uri ? evac.uri : ''" target="_blank" rel="noopener">{{evac.eventName}}</a>
+          <div class="issued-by">(Issued By: {{evac.issuingAgency}})</div>
+        </div>
+      </div>
     </div>
-    <div class="divider"></div>
-    <div class="info-panel">
-      <div class="gutter"><span class="label">Size: </span><span>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares </span> <span>{{displaySizeType(incident.incidentSizeDetail)}}</span></div>
-      <div class="paragraph-format">{{incident.incidentSizeDetail || 'Fire size is estimated and based on the most current information available.'}}</div>
-      <div class="gutter" *ngIf="incident.incidentLocation"><span class="label">Location</span></div>
-      <div class="paragraph-format">{{incident.incidentLocation}}</div>
-      <div class="gutter" *ngIf="incident.traditionalTerritoryDetail"><span class="label">Traditional Territory</span></div>
-      <div class="paragraph-format">{{incident.traditionalTerritoryDetail}}</div>
-    </div>
-    <!-- Evac Orders-->
-    <div *ngIf="evacOrders.length > 0" class="divider"></div>
-    <div style="padding-top: 7px;" *ngIf="evacOrders.length > 0">
-      <h4>Active Evacuation Orders and Alerts</h4>
-      <div class="evac-list" *ngFor="let evac of evacOrders">
-        <mat-icon style="text-decoration: none;">error</mat-icon>
-        <a class="label" [href]="evac.uri ? evac.uri : ''" target="_blank" rel="noopener">{{evac.eventName}}</a>
-        <div class="issued-by">(Issued By: {{evac.issuingAgency}})</div>
+    <div *ngIf="hideOnMobileView()">
+      <div class="header-content">
+        <div class="item"> Last updated <span>{{convertoToMobileFormate(incident.lastUpdatedTimestamp)}}</span></div>
+        <div class="item"> Fire Number <span>{{convertFireNumber(incident)}}</span></div>
+      </div>
+
+      <div class="header-content">
+        <div class="item"> Discovered on <span>{{convertoToMobileFormate(incident.discoveryDate)}}</span></div>
+        <div class="item"> Fire Size <span>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares </span></div>
+      </div>
+
+      <div class="header-content">
+        <div class="item">
+          <button mat-button class="mobile-button">
+            <span class="material-icons-outlined">notifications_active</span>
+            Notification On
+          </button>
+        </div>
+        <div class="item">
+          <button mat-button class="mobile-button">
+            Contact Us
+          </button>
+        </div>
       </div>
     </div>
   </div>
