--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
@@ -1,7 +1,22 @@
 .panel{
     background-color: white !important;
-    padding:24px;
+    .warning-card{
+        background-color: #fdf0f3;
+        color: #b42e45;
+        margin-top: 16px;
+        .container{
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            font-size: 16px;
+            span{
+                padding-left: 8px;
+                text-align: left;
+            }
+        }
+    }
     .content-panel {
+        padding:24px;
         .content-panel-stack{
             h1 {
                 font-size: 22px;
@@ -54,6 +69,24 @@
                 text-align: left;
                 line-height: 24px;
                 padding-bottom: 10px;
+            }
+
+            .evac-order-card{
+                background-color:#fdf0f3;
+                color: #b42e45;
+                border-radius: 5px;
+                box-sizing: border-box;
+                box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+                margin-bottom: 16px;
+                .container{
+                    padding: 10px;
+                    display: flex;
+                    align-items: center;
+                }
+                span{
+                    padding-left: 8px;
+                    text-align: left;
+                }
             }
 
             .mobile-button{
