add contact-us pop up

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -55,7 +55,7 @@
             </button>
           </div>
           <div class="item">
-            <button mat-button class="mobile-button">
+            <button mat-button class="mobile-button" (click)="openContactUsWindow()">
               Contact Us
             </button>
           </div>
