--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
@@ -158,7 +158,7 @@
             <h1>Current Resources</h1>
             <div class="sub-content">The BC Wildfire Service relies on thousands of people each year to respond to wildfires. This includes firefighters, air crew, equipment operators, and support staff. For more information on resources assigned to this incident, please contact the information officer listed in the “Contact Us” section.</div>
             <div class="resource-section" *ngIf="incident.wildfireCrewResourcesInd">
-                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-crews" target="_blank">
+                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-crews" target="_blank" rel="noopener">
                     <div class="resource-section-content">
                         <span>
                             <img class="image-size" src="../../../assets/images/svg-icons/wildfire-crews-mobile.svg" alt="Wildfire Crews" />
@@ -171,7 +171,7 @@
                 </a>
             </div>
             <div class="resource-section" *ngIf="incident.wildfireAviationResourceInd">
-                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-aviation" target="_blank">
+                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-aviation" target="_blank" rel="noopener">
                     <div class="resource-section-content">
                         <span>
                             <img class="image-size" src="../../../assets/images/svg-icons/aviation-mobile.svg" alt="Wildfire Crews" />
@@ -184,7 +184,7 @@
                 </a>
             </div>
             <div class="resource-section" *ngIf="incident.incidentMgmtCrewRsrcInd">
-                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/incident-management" target="_blank">
+                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/incident-management" target="_blank" rel="noopener">
                     <div class="resource-section-content">
                         <span>
                             <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams-mobile.svg" alt="Wildfire Crews" />
@@ -197,7 +197,7 @@
                 </a>
             </div>
             <div class="resource-section" *ngIf="incident.heavyEquipmentResourcesInd">
-                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/heavy-equipment" target="_blank">
+                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/heavy-equipment" target="_blank" rel="noopener">
 
                     <div class="resource-section-content">
                         <span>
@@ -212,7 +212,7 @@
             </div>
 
             <div class="resource-section" *ngIf="incident.structureProtectionRsrcInd">
-                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/structure-protection" target="_blank">
+                <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/structure-protection" target="_blank" rel="noopener">
                     <div class="resource-section-content">
                         <span>
                             <img class="image-size" src="../../../assets/images/svg-icons/structure-protection-mobile.svg" alt="Wildfire Crews" />
