--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -10,7 +10,9 @@
           <incident-info-panel-mobile *ngIf="hideOnMobileView()" [incident]="incident" [evacOrders]="evacOrders" [areaRestrictions]="areaRestrictions"></incident-info-panel-mobile>
         </mat-tab>
         <mat-tab label="Details">
-          <incident-overview-panel [incident]="incident"></incident-overview-panel>
+          <incident-overview-panel *ngIf="!hideOnMobileView()" [incident]="incident"></incident-overview-panel>
+          <incident-overview-panel-mobile *ngIf="hideOnMobileView()" [incident]="incident" ></incident-overview-panel-mobile>
+
         </mat-tab>
         <mat-tab label="Gallery">
           <ng-template matTabContent>
