update incidnetDetail page general header in mobile

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -156,8 +156,32 @@
 @media (max-width: 768px) {
   .header-container {
     padding: 0px !important;
+    .mobile-header{
+      height: 50px;
+      display: flex;
+      justify-content: space-between;
+      padding:0 24px;
+      align-items: center;
+      position: sticky !important; 
+      top:0;
+      background-color: white;
+      z-index:9999;
+    }
   }
   .title{
     color:black !important
   }
 }
+
+:host ::ng-deep .mat-tab-header {
+  top: -1px;
+  z-index: 1000;
+  position: sticky;
+  position: -webkit-sticky; /* macOS/iOS Safari */
+  background-color: #f3f6f9;
+  @media (max-width: 768px) {
+    background-color: white !important;
+    top:50px;
+  }  
+}
+
