--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -1,4 +1,9 @@
 <div class="header-container forPrint" id="toprint-header">
+  <div class="mobile-header" *ngIf="hideOnMobileView()">
+    <span class="material-icons" (click)="backToMap()">arrow_back</span>
+    <span>Wildfire</span>
+    <span class="material-icons" (click)="shareContent()">share</span>  
+  </div>
   <div id="map" class="map-container" *ngIf="hideOnMobileView()">
   </div>
   <div class="incident-details">
