--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -36,16 +36,18 @@
       <div>
         <!-- Image/video section: fetch from aws cache -->
         <div style="text-align: center;" *ngIf="primaryMedia !== null">
-          <div *ngIf="showWarning" class="preview-warning">Warning: Primary Video/Image selection cannot be previewd</div>
-          <img id="primary-image-container" *ngIf="primaryMedia.type === 'image'" style="max-width: 100%; height: auto; max-height: 500px; border-radius: 16px;" [alt]="primaryMedia.title" [src]="primaryMedia.thumbnail" width="500" height="500" (error)="handleImageFallback(primaryMedia.href)" />
-          <youtube-player class="no-print" *ngIf="primaryMedia.type === 'video'"
-            videoId={{convertToYoutubeId(primaryMedia.href)}}
-            suggestedQuality="highres"
-            [startSeconds]="1"
-            [endSeconds]="20"
-            [height]="250"
-            [width]="400">
-          </youtube-player>
+          <div *ngIf="showWarning; else primaryImage" class="preview-warning">Warning: Primary Video/Image selection cannot be previewd</div>
+          <ng-template #primaryImage>
+            <img id="primary-image-container" *ngIf="primaryMedia.type === 'image'" style="max-width: 100%; height: auto; max-height: 500px; border-radius: 16px;" [alt]="primaryMedia.title" [src]="primaryMedia.thumbnail" width="500" height="500" (error)="handleImageFallback(primaryMedia.href)" />
+            <youtube-player class="no-print" *ngIf="primaryMedia.type === 'video'"
+              videoId={{convertToYoutubeId(primaryMedia.href)}}
+              suggestedQuality="highres"
+              [startSeconds]="1"
+              [endSeconds]="20"
+              [height]="250"
+              [width]="400">
+            </youtube-player>
+          </ng-template>
         </div>
         <!-- contact section-->
         <h1>Incident Contact Information</h1>
