--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel-mobile/incident-maps-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel-mobile/incident-maps-panel-mobile.component.html
@@ -7,7 +7,7 @@
             <div class="contents">
                 <div *ngIf="maps && maps.length; else showDisclaimer">
                     <div class="sub-title">Click to download the PDF</div>
-                    <div *ngFor="let map of maps">
+                    <div *ngFor="let map of maps | slice:0:limit">
                         <div style="display: flex; padding-top: 27px;">
                             <div class="file-pdf-icon" (click)="downloadMap(map.link, map.name)"></div>
                             <div class="file-info">
@@ -15,6 +15,13 @@
                                 <div class="document-date">{{convertDate(map.date)}}</div>
                             </div>
                         </div>
+                    </div>
+                    <div class="load-more-row" style="display: flex; justify-content: center; padding-top: 32px;">
+                        <button mat-button class="load-more-button" (click)="loadMore()" [disabled]="maps.length <= limit">
+                            <span style="font-size: 16px;">
+                                Load More
+                            </span>
+                        </button>
                     </div>
                 </div>
                 <ng-template #showDisclaimer>
